<resources>
    <string name="app_name">PizzaApp</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="login_image">Login image</string>
    <string name="icon_email">icon_email</string>
    <string name="email">Email</string>
    <string name="icon_password">Icon password</string>
    <string name="password">Password</string>
    <string name="new_to_here">New to here?</string>
    <string name="sign_up">Sign up</string>
    <string name="register_image">Register image</string>
    <string name="icon_username">Icon username</string>
    <string name="username">Username</string>
    <string name="back_button">Back button</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="me">Me</string>
    <string name="logout_button">Logout button</string>
    <string name="update_profile_button">Update profile button</string>
    <string name="my_account_option">my account option</string>
    <string name="my_account">My Account</string>
    <string name="make_changes_to_your_account">Make changes to your account</string>
    <string name="arrow_button">Arrow button</string>
    <string name="Logout">Log out</string>
    <string name="further_secure_your_account_for_safety">Further secure your account for safety</string>
    <string name="_0">(0)</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="price_0">₴0.00</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="_0g">0g</string>
    <string name="details">Details</string>
    <string name="search">Search</string>
    <string name="basket">Basket</string>
    <string name="go_to_checkout">Go to Checkout</string>
    <string name="plus">plus</string>
    <string name="_1">1</string>
    <string name="minus">minus</string>
    <string name="subtotal">Subtotal</string>
    <string name="back_to_menu">Back to menu to grab something else?</string>
    <string name="promo_code">Promo Code</string>
    <string name="delivery_address">Delivery address</string>
    <string name="rider_notes">Rider Notes</string>
    <string name="e_g_please_don_t_ring_the_bell">E.g. Please don\'t ring the bell</string>
    <string name="total">Total</string>
    <string name="basket_total">Basket Total</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="filter">filter</string>
    <string name="search_product">Search Product</string>
    <string name="find_your_suitable_product_now">Find your suitable product now.</string>
    <string name="filters">Filters</string>
    <string name="ok">Ok</string>
</resources>