<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/login_image"
        android:src="@drawable/image1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginStart="55dp"
        android:text="@string/login"
        android:fontFamily="@font/ubuntu_medium"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_lin"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginTop="34dp">

        <ImageView
            android:id="@+id/icon_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/email_icon"
            android:contentDescription="@string/icon_email"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/email_et"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:layout_marginStart="9dp"
            android:hint="@string/email"
            android:fontFamily="@font/ubuntu_light"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_lin"
        app:layout_constraintTop_toBottomOf="@id/email_lin"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginTop="18dp">

        <ImageView
            android:id="@+id/icon_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/password_icon"
            android:contentDescription="@string/icon_password"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/password_et"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:fontFamily="@font/ubuntu_light"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/password_lin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/ubuntu_light"
        android:layout_marginTop="48dp"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_to_here"/>

        <TextView
            android:id="@+id/go_to_register_activity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/sign_up"
            android:layout_marginStart="7dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>