<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_btn"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_round_arrow_back"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/register_image"
        android:src="@drawable/image2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginStart="55dp"
        android:text="@string/sign_up"
        android:fontFamily="@font/ubuntu_medium"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_lin"
        app:layout_constraintTop_toBottomOf="@id/register_title"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginTop="34dp">

        <ImageView
            android:id="@+id/icon_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/email_icon"
            android:contentDescription="@string/icon_email"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/email_et"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:layout_marginStart="9dp"
            android:hint="@string/email"
            android:fontFamily="@font/ubuntu_light"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_lin"
        app:layout_constraintTop_toBottomOf="@id/email_lin"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginTop="18dp">

        <ImageView
            android:id="@+id/icon_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/username_icon"
            android:contentDescription="@string/icon_username"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/username_et"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:layout_marginStart="9dp"
            android:hint="@string/username"
            android:fontFamily="@font/ubuntu_light"
            android:inputType="textPersonName"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_lin"
        app:layout_constraintTop_toBottomOf="@id/username_lin"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginTop="18dp">

        <ImageView
            android:id="@+id/icon_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/password_icon"
            android:contentDescription="@string/icon_password"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/password_et"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:fontFamily="@font/ubuntu_light"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@id/password_lin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/ubuntu_light"
        android:layout_marginTop="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>