<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProductActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/image_cl"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/image_vp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_round_arrow_back_white"
            android:contentDescription="@string/back_button"
            android:backgroundTint="@android:color/transparent"/>

        <ImageButton
            android:id="@+id/addToCart_btn"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/heart"
            android:contentDescription="@string/add_to_cart"
            android:backgroundTint="@android:color/transparent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/image_cl"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/price_tv"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="20sp"
                android:fontFamily="@font/raleway_bold"
                android:textColor="@color/textPurple"/>

            <TextView
                android:id="@+id/categories_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_tv"
                android:textSize="14sp"
                android:textColor="@color/textSecondary"
                android:paddingTop="8dp"/>

            <TextView
                android:id="@+id/price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/price_0"
                android:textColor="@color/purpleLight"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/proportions_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_cl"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/proportions_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                tools:itemCount="0"/>

            <TextView
                android:id="@+id/weight_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="20sp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/_0g"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/detailsLabel_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/proportions_cl"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/raleway_medium"
            android:textSize="16sp"
            android:text="@string/details"
            android:textColor="@color/purpleLight"/>

        <TextView
            android:id="@+id/details_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="8dp"
            tools:layout_editor_absoluteX="20dp"
            android:fontFamily="@font/raleway"
            android:textSize="14sp"
            android:textColor="@color/textDetails"
            app:layout_constraintTop_toBottomOf="@id/detailsLabel_tv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>