<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.profile.ProfileFragment"
    android:background="@color/whiteBackground">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_sans_bold"
        android:textSize="20sp"
        android:text="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="16dp"/>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:id="@+id/info_cl"
        android:background="@color/blue">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/info_image_cl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:id="@+id/image_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/loading_image"/>
            
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_view">

                <TextView
                    android:id="@+id/username_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_bold"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Username"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/email_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/dm_sans"
                    android:textSize="13sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/username_tv"
                    tools:text="user@example.com"
                    android:textColor="@color/whiteD7"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_outline_mode_edit_outline"
            android:contentDescription="@string/update_profile_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_cl"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="22dp"
        android:background="@color/white"
        android:paddingHorizontal="16dp"
        android:paddingVertical="24dp"
        android:elevation="4dp"
        android:translationZ="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/options_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/my_account_cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <FrameLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/round_container"
                    android:id="@+id/image_my_account_fl">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/my_account_option"
                        android:src="@drawable/profile"
                        android:layout_margin="10dp"/>

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_account"
                    app:layout_constraintStart_toEndOf="@id/image_my_account_fl"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/dm_sans_medium"
                    android:layout_marginStart="16dp"
                    android:textSize="13sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/make_changes_to_your_account"
                    app:layout_constraintStart_toEndOf="@id/image_my_account_fl"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:fontFamily="@font/dm_sans"
                    android:layout_marginStart="16dp"
                    android:textSize="11sp"
                    android:textColor="@color/textSecondary"/>

                <ImageButton
                    android:layout_width="7dp"
                    android:layout_height="12dp"
                    android:contentDescription="@string/arrow_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/month_chevron"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/logout_cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/my_account_cl"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent">

                <FrameLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/round_container"
                    android:id="@+id/image_logout_fl">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/my_account_option"
                        android:src="@drawable/logout"
                        android:layout_margin="10dp"/>

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Logout"
                    app:layout_constraintStart_toEndOf="@id/image_logout_fl"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/dm_sans_medium"
                    android:layout_marginStart="16dp"
                    android:textSize="13sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/further_secure_your_account_for_safety"
                    app:layout_constraintStart_toEndOf="@id/image_logout_fl"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:fontFamily="@font/dm_sans"
                    android:layout_marginStart="16dp"
                    android:textSize="11sp"
                    android:textColor="@color/textSecondary"/>

                <ImageButton
                    android:layout_width="7dp"
                    android:layout_height="12dp"
                    android:contentDescription="@string/arrow_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/month_chevron"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>